--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 @import "./base.css";
 @import "./components.css";
-@import "./utilities.css";
-/* @import "./utilites_bottom.css"; */
+/* @import "./utilities.css"; */
+@import "./utilites_bottom.css";
 @import "./layout.css";
 @import "./testimonial.css";
 
@@ -29,6 +29,7 @@
   --font-body:"Onest",sans-serif;
   --font-heading:"Plus Jakarta Sans",sans-serif;
   --font-default:"roboto",sans-serif;
+  --font-inter: "Inter", sans-serif; /* ADD THIS */
   --font-inherit:inherit;
   /* font-weight */
   --font-weight-inherit:inherit;
