--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -516,43 +516,6 @@
 
 
 
-
-
-
-/* ===========================
-   TESTIMONIAL SECTION
-   =========================== */
-
-.testimonial-section {
-  @apply w-full my-80 overflow-visible bg-white;
-}
-
-.testimonial-inner-wrapper {
-  @apply max-w-1679 mx-auto px-16 sm:px-24 lg:px-40
-         py-40 sm:py-56 lg:py-80
-         flex flex-col gap-32 sm:gap-40;
-}
-
-.testimonial-heading-container {
-  @apply flex flex-col items-center gap-13 sm:gap-13 text-center;
-}
-
-.testimonial-heading-container div {
-  @apply flex items-center gap-10;
-}
-
-.testimonial-heading-container h2 {
-  @apply text-28 sm:text-36 lg:text-44 font-bold capitalize text-center text-white font-heading;
-}
-
-.testimonial-heading-container span {
-  @apply text-12 sm:text-14 uppercase tracking-[1px] text-white/80 font-heading;
-}
-
-.testimonial-inner-wrapper .cards-container {
-  @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-20 xl:gap-30;
-}
-
 /* ===========================
    BRANDS SECTION WRAPPERS
    =========================== */
@@ -647,4 +610,70 @@
          font-bold capitalize text-black leading-tight
          text-center lg:text-left;
   white-space: normal;
+}
+
+
+/* new styles from me */
+.our-brands-section-main .our-brands-inner-wrapper .brands-cards-container .brand-card .card-overlay {
+    @apply absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20
+                        bg-[rgba(216,38,38,0.80)] text-white
+                        translate-y-full opacity-0
+                        group-hover:translate-y-0 group-hover:opacity-100
+                        transition-all duration-300;
+}
+.our-brands-section-main .our-brands-inner-wrapper .brands-cards-container .brand-card .card-overlay p{
+    @apply font-body text-14 sm:text-16 leading-22 sm:leading-26;
+}
+.our-brands-section-main .our-brands-inner-wrapper .card-black-overlay {
+    @apply hidden group-hover:flex absolute top-20 right-20 w-50 h-50 p-[1px] justify-center items-center transition-transform duration-200
+                     group-active:scale-90;
+}
+
+
+
+
+/* ===========================
+   TESTIMONIAL SECTION
+   =========================== */
+
+
+
+
+.testimonial-section {
+  @apply w-full my-80 overflow-visible bg-white;
+}
+.testimonial-title {
+    @apply font-heading text-center text-44 font-bold text-[#D82626];
+}
+.testimonial-heading-container {
+  @apply max-w-1395 mx-auto flex flex-col items-center gap-13 px-24;
+}
+
+
+.testimonial-slider-wrapper {
+  @apply max-w-[1269.36px] mx-auto flex flex-col items-center gap-40 mt-60;
+}
+.testimonial-slider-outer-wrapper {
+  @apply relative w-full overflow-hidden cursor-grab select-none;
+}
+.testimonial-slider-inner-wrapper {
+  @apply flex transition-transform duration-500 ease-out w-full will-change-transform;
+}
+.testimonial-slider-card-wrapper {
+  @apply basis-full md:basis-1/2 lg:basis-1/3 shrink-0 px-12;
+}
+.testimonial-slider-card-wrapper .card{
+  @apply bg-[#0055A4] text-white rounded-[40px] px-51 py-40 min-h-360 h-full flex flex-col justify-between;
+
+}
+.testimonial-slider-card-wrapper .card p{
+  @apply font-body text-16 leading-28 mt-4;
+
+}
+.testimonial-slider-card-wrapper .card .owner-info h4{
+  @apply text-20 font-heading font-semibold leading-24;
+
+}
+.testimonial-slider-card-wrapper .card .owner-info .owner-role {
+  @apply font-inter text-16 leading-28 font-normal;
 }
