--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -48,7 +48,7 @@
 }
 
 .announcement-bar-kat {
-  @apply w-full bg-[#002060] overflow-hidden py-13;
+  @apply w-full bg-[#808080] overflow-hidden py-13;
 }
 
 .header-main {
@@ -70,11 +70,11 @@
 }
 
 .header-button .header-red-button {
-  @apply h-46 px-4 lg:px-12 py-5 bg-[#D92727] text-white text-15 font-medium flex items-center gap-2 lg:gap-10 hover:bg-[#b82020] transition-all;
+  @apply h-46 px-4 lg:px-12 py-5 bg-[#000000] text-white text-15 font-medium flex items-center gap-2 lg:gap-10 hover:bg-[#b82020] transition-all;
 }
 
 .header-blue-button {
-  @apply h-46 px-4 lg:px-12 py-5 bg-[#004AAD] text-white text-14 font-semibold hover:bg-[#003888] transition-all flex items-center gap-2 lg:gap-10 whitespace-nowrap;
+  @apply h-46 px-4 lg:px-12 py-5 bg-[#D82626] text-white text-14 font-semibold hover:bg-[#003888] transition-all flex items-center gap-2 lg:gap-10 whitespace-nowrap;
 }
 
 .header-blue-button a {
